--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -16,6 +16,7 @@ info:
 spring:
     jmx:
         unique-names: true
+        web-application-type: none
     main:
         banner-mode: "off"
     groovy:
